--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-dash==3.0.4
-dash_bootstrap_components==2.0.3
-dominate==2.9.1
-pandas==2.3.0
 asgiref==3.8.1
 Django==5.2.1
 sqlparse==0.5.3
 tzdata==2025.2
+dj-database-url==2.1.0
+psycopg2-binary==2.9.7
+gunicorn==21.2.0
+whitenoise==6.5.0
